--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -19,40 +19,76 @@
   "Fragen": "Questions",
   "Danke fürs Mitmachen! Du kennst dich jetzt richtig gut im Arenenberger Milchviehstall aus.": "Thank you for taking the quiz! You know your way around the Arenenberg dairy barn really well now.",
   "Nochmal spielen": "Play again",
-  "Bäuerin": "Farmer",
+  "Bauer": "Farmer",
   "Folgen Sie einem typischen Apriltag einer Kuh im Arenenberger Milchviehstall! Die Kuh Frida ist fünf Jahre alt. Sie hat zweimal gekalbert. Pro Tag liefert sie im Schnitt 25 Liter Milch.": "Follow a typical April day of a cow in the Arenenberg dairy cowshed! Frida is a five-year-old dairy cow. She has calved twice and provides an average of 25 litres of milk per day.",
-  "6.00": "6 a.m.",
+  "06.00": "6 a.m.",
   "6 Uhr": "6 a.m.",
+  "07.00": "7 a.m.",
+  "7 Uhr": "7 a.m.",
+  "08.00": "8 a.m.",
+  "8 Uhr": "8 a.m.",
+  "09.00": "9 a.m.",
+  "9 Uhr": "9 a.m.",
+  "10.00": "10 a.m.",
+  "10 Uhr": "10 a.m.",
+  "11.00": "11 a.m.",
+  "11 Uhr": "11 a.m.",
+  "12.00": "12 p.m.",
+  "12 Uhr": "12 p.m.",
+  "13.00": "1 p.m.",
+  "13 Uhr": "1 p.m.",
+  "14.00": "2 p.m.",
+  "14 Uhr": "2 p.m.",
+  "15.00": "3 p.m.",
+  "15 Uhr": "3 p.m.",
+  "16.00": "4 p.m.",
+  "16 Uhr": "4 p.m.",
+  "17.00": "5 p.m.",
+  "17 Uhr": "5 p.m.",
+  "18.00": "6 p.m.",
+  "18 Uhr": "6 p.m.",
+  "19.00": "7 p.m.",
+  "19 Uhr": "7 p.m.",
+  "20.00": "8 p.m.",
+  "20 Uhr": "8 p.m.",
+  "22.00": "10 p.m.",
   "Frida geht auf die Weide. Sie frisst junges, frisches Gras. Das ist sehr gehaltreiches Futter.": "Frida goes to the pasture. She eats fresh, green grass. This is very nutritious fodder.",
   "Freier Tierverkehr": "Free movement of animals",
   "Frida und die anderen Kühe am Arenenberg geniessen grosse Freiheiten. Sie entscheiden selbst, wann sie fressen und trinken, liegen oder sich melken lassen.": "Frida and the other cows at Arenenberg have a considerable amount of freedom. They decide for themselves when to eat and drink, when to lie down and when to be milked.",
-  "10.00": "10 a.m.",
-  "10 Uhr": "10 a.m.",
   "Frida geht zurück zum Stall. Sie freut sich auf den Nachtisch, das Lockfutter, das beim Melkroboter auf sie wartet.": "Frida returns to her cowshed. She is looking forward to her next course, i.e. the bait pellets waiting for her by the milking robot.",
   "Weidemanagement": "Pasture management",
   "Die Kühe sollen möglichst viel junges Gras auf der Weide fressen, jedoch nicht den ganzen Tag. Mindestens zweimal täglich müssen sie gemolken werden. Die Weide ist so gross, dass die Kühe sie in einigen Stunden abweiden. Mit dem Wissen, dass sie am Nachmittag wieder auf eine neue, frische Weide zugelassen werden, gehen sie vor dem Mittag zurück in den Stall und lassen sich melken.": "The cows should eat as much fresh grass as possible on the pasture, but not all day long. They need to be milked at least twice per day. The cows can graze down a pasture of this size within a few hours. They return to the cowshed before noon for milking in the knowledge that they will be allowed back onto a fresh, new pasture in the afternoon.",
-  "11.00": "11 a.m.",
-  "11 Uhr": "11 a.m.",
   "Frida steht im Melkroboter. Sie frisst leckeres Futter und wird gemolken. Der Melkroboter führt die Melkarbeit stets gleich und geduldig aus. Das ist angenehm für Frida.": "Frida is standing by the milking robot. She eats delicious fodder and is being milked. The milking robot always milks the cows in the same, patient way. Frida finds it a pleasant experience.",
   "Automatisches Melksystem": "Automatic milking system",
   "Die Kühe werden mit Futter in den Melkroboter gelockt. Die Melkarbeit übernimmt das automatische Melksystem. Es melkt ohne Stress und nicht zu lange. Die Kühe sollen mindestens zweimal pro Tag gemolken werden.": "The cows are enticed into the milking robot with fodder. They are milked by an automatic milking system. It's stress-free and does not take very long. The cows need to be milked at least twice per day.",
-  "12.00": "12 p.m.",
-  "12 Uhr": "12 noon",
   "Besonders nach dem Melken, aber auch immer wieder zwischendurch, trinkt Frida am Tränketrog frisches Wasser, pro Tag durchschnittlich circa 120 Liter. Nach dem frischen und jungen Gras hat Frida Lust auf etwas Trockenes und Ballastreiches. Sie frisst am Futtertisch Heu. Heu ist ein ideales Ausgleichsfutter zu jungem Gras und stabilisiert die Verdauung von Frida.": "Frida drinks fresh water from the trough, especially after milking but also in between, averaging about 120 litres per day. After eating the fresh, green grass, Frida would like something dry and high in fibre. She eats hay at the feed alley. Hay is an ideal complement to young grass, and stabilises Frida's digestion.",
   "Daten": "Data",
   "Der Melkroboter und ein Sensor am Halsband der Kühe sammeln Daten zur Milch und zur Kuh. Diese Daten beschreiben z. B. die Qualität der Milch oder die Aktivität der Kühe. Sie liefern zudem Hinweise auf ihre Gesundheit.": "The milking robot and a sensor on the cow’s collar collect information about the milk and the cow, for example, about the quality of the milk or the cows' activity. It also provides information about the cow's health.",
-  "13.00": "1 p.m.",
-  "13 Uhr": "1 p.m.",
   "Frida will sich ausruhen und legt sich ins frisch eingestreute Sägemehl. Zuvor macht sie Körperhygiene und lässt sich von der automatischen Kuhputzbürste den Staub aus dem Fell bürsten.": "Frida wants to rest and lies down in the freshly sprinkled sawdust. Beforehand, she carries out her personal hygiene routine and lets the automatic livestock brush remove the dust from her hide.",
   "Kompostierungsstall": "Composting barn",
   "Der Kompostierungsstall bietet den Kühen viel Liegekomfort und grosse Bewegungsfreiheit. Die Liegefläche wird mit frischem Einstreumaterial wie Sägemehl eingefüllt. Aus dem Einstreumaterial, dem Kot und dem Harn der Kühe entsteht ein wertvoller Kompost, der als Dünger auf die Felder verteilt wird.": "The composting barn provides the cows with plenty of comfortable material to lie on and plenty of freedom to move about. The floor is covered with fresh bedding material such as sawdust. The bedding material, dung and urine of the cows produce a rich compost, which is then spread on the fields as fertiliser.",
-  "17.00": "5 p.m.",
-  "17 Uhr": "5 p.m.",
   "Es ist Zeit, nochmals auf die Weide zu gehen. Frida begibt sich zum Weidetor und erhält Zugang zu einer neuen, frischen Weide mit saftigem Gras.": "It’s time to go grazing again. Frida goes to the pasture gate and is allowed onto a new, fresh pasture with lush grass.",
   "Weidetor": "Pasture gate",
   "Die Kühe werden über das Weidetor gesteuert. Das Weidetor gibt ihnen den Zugang zur Weide nur frei, wenn ihre letzte Melkung weniger als sieben Stunden zurückliegt. Ansonsten werden sie zurück in den Stall geleitet, um zuerst den Melkroboter aufzusuchen.": "The cows are controlled via the pasture gate. The pasture gate only lets them onto the pasture if they were last milked less than seven hours ago. Otherwise, they are led back to the cowshed for milking before they are released.",
-  "20.00": "8 p.m.",
-  "20 Uhr": "8 p.m.",
   "Satt gefressen begibt sich Frida zurück in den Stall und lässt sich nochmals melken. Danach entscheidet sie selbst, ob sie die Nacht im Stall oder im Freien auf der Weide verbringt.": "Her hunger stilled, Frida returns to the cowshed and is milked again. She then chooses whether to spend the night in the cowshed or outdoors on the pasture.",
-  "22.00": "10 p.m."
+  "Folgen Sie einem typischen Arbeitstag des Bauern im Arenenberger Milchviehstall!": "Follow a farmer's typical working day at the Arenenberg dairy cowshed!",
+  "Der Bauer startet um 6 Uhr seine Arbeit im Arenenberger Milchviehstall. Feierabend ist um 18 Uhr. Als Erstes überprüft der Bauer den Milchtank (Milchtemperatur, Filter). Ab und zu wird er von einem frisch geborenen Kalb überrascht, das bereits bei seiner Mutter steht. In rund neunzig Prozent der Fälle erfolgt eine Kalbung in der Nacht.": "The farmer starts work at the Arenenberg dairy cowshed at 6 a.m. The day ends at 6 p.m. First, the farmer checks the milk tank (temperature, filter). Every now and then he is surprised to find a newly born calf standing next to its mother. Calving takes place during the night in about ninety percent of cases.",
+  "Stall": "The cowshed",
+  "Der Arenenberger Milchviehstall bietet den Kühen maximalen Liegekomfort und grosse Bewegungsfreiheit. So können sie ohne Stress ihre Kälber gebären. Die Jungtiere vertragen die tiefen Temperaturen im Stall gut. Was sie nicht mögen, ist die Zugluft.": "The Arenenberg dairy cowshed provides the cows with maximum lying comfort and plenty of freedom to move. This allows them to give birth to their calves in a stress-free environment. The young animals don't suffer from the low temperatures in the cowshed, but they don't like draughty conditions.",
+  "Der Bauer reinigt mit Wasser den Melkroboter und den Standplatz für die Kühe. Er erwärmt die Milch für die Kälber auf maximal 42 Grad Celsius. Die vom automatischen Melksystem erfassten Daten zeigen dem Bauer an, ob eine Kuh brünstig oder krank ist. Er ergreift die entsprechenden Massnahmen und lässt die Kuh besamen oder behandeln.": "The farmer cleans the milking robot and the cows' standing area with water. He heats the milk for the calves to a maximum of 42 degrees Celsius. The information collected by the automatic milking system tells the farmer whether a cow is in season or sick. He takes appropriate measures and has the cow inseminated or treated.",
+  "Der Bauer säubert die Futterkrippe. Mit dem Kran verteilt er Heu und Emd. Ab August verfüttert der Bauer zusätzlich Frischmais. Im Winter versorgt er jede Kuh mit zehn Kilogramm Karotten oder Randen, vier Kilogramm Vollmaiswürfel und rund zwei Kilogramm Zuckerrübenschnitzel.": "The farmer cleans the manger. He uses a crane to distribute first- and second-cut hay. From August onwards, the farmer also gives the cows fresh maize. In winter, he supplies each cow with ten kilograms of carrots or beetroot, four kilograms of whole maize pellets and about two kilograms of sugar beet pulp.",
+  "Futter und Heubelüftung": "Fodder and hay ventilation",
+  "Im Winter gibt es kein frisches Gras für die Kühe, nur Heu und Dürrfutter. Damit das Heu hochwertig und schmackhaft bleibt, muss es aktiv im Heustock mit warmer Luft nachgetrocknet werden.": "In winter, there is no fresh grass for the cows, only hay and dried fodder. The hay must be actively dried in the haystack using warm air to ensure that it maintains its quality and taste.",
+  "Der Bauer überprüft das Kraftfuttersilo und den Mineralstoffbehälter. Dann widmet er sich den Kälbern: füttern, Wasser kontrollieren, Futter auffüllen. Schliesslich mistet er aus, streut die Liegefläche neu ein, wischt den Vorplatz und reinigt das sogenannte Milchtaxi. Dieser mobile Milchtank versorgt die Jungtiere mit Milch.": "The farmer checks the fodder silo and the mineral container. Then he turns his attention to feeding the calves, checking their water and replenishing their fodder. Finally, he mucks their shed out, replaces the bedding, wipes the forecourt and cleans the so-called milk taxi. This mobile milk tank supplies the young animals with milk.",
+  "Der Bauer fräst die Liegeflächen, damit Kot und Harn gut durchmischt sind und der Kompostierungsprozess optimal verläuft.": "The farmer rakes the lying areas so that the dung and urine are well mixed to allow optimum composting.",
+  "Entmistungsroboter": "Robotic vacuum",
+  "Bei der Reinigung des Stallbodens wird der Bauer von einem Entmistungsroboter unterstützt. Alle neunzig Minuten fährt dieser eine programmierte Route ab, saugt den Mist in einen Tank auf und entlädt diesen in die Güllegrube. Er befeuchtet den Laufgang und spült ihn nach.": "The farmer uses a robotic vacuum to clean the floor in the cowshed. Every ninety minutes it follows a programmed route and vacuums and turns the dung. It irrigates and rinses the walkway.",
+  "Der Bauer geht zu den Leghennen im mobilen Hühnerstall auf der Wiese. Er holt die Eier raus, überprüft den Futter- und Wasserstand und schaut, ob es den rund 350 Hühnern gut geht. Danach kümmert er sich um die circa zwanzig Schafe. Er kontrolliert die Tiere, das Wasser und Futter, den Zaun und die Einstreu im Stall. Und er schaut nach, ob über Nacht ein Lamm geboren ist.": "The farmer goes to the laying hens in the mobile coop on the pasture. He removes the eggs, checks the feed and the water levels and whether the 350 or so chickens are healthy. He then turns his attention to the 20 or so sheep. He checks the animals, their water and feed, the fence and the bedding in the barn. He also checks to see whether any lambs have been born during the night.",
+  "Mittagszeit": "Lunchtime",
+  "Wenn die Tiere versorgt sind, nimmt der Bauer die übrigen Arbeiten im Stall oder auf dem Feld in Angriff: heuen, Acker bestellen, Instandstellungen.": "Once he's seen to the animals, the farmer tends to the other jobs in the barn or on the pasture such as haymaking, tilling the fields or making any repairs.",
+  "Für den Folgetag richtet der Bauer zwei neue Weide-Koppeln.": "The farmer prepares two new pasture paddocks for the following day.",
+  "Der Bauer widmet sich erneut der Stallarbeit: Milch wärmen für die Kälber und Kälber tränken, den Kühen Futter vorlegen, Geräte reinigen.": "The farmer returns to the cowshed to see to any jobs there such as warming the milk for de calves, watering the calves, feeding the cows, cleaning the appliances.",
+  "Die Liegefläche der Kühe wird gefräst, Futter und Wasser werden aufgefüllt und die Tiere beobachtet.": "He rakes their bedding, tops up the fodder and water and checks on the animals.",
+  "Eine Schlusskontrolle bei den Leghennen und das Ausstreuen von Körnern beenden den Arbeitstag im Arenenberger Milchviehstall.": "The farmer finishes his working day at in the Arenenberg dairy cowshed with a final check on the laying hens and scattering fresh grain."
+
 }
