--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -19,41 +19,77 @@
   "Fragen": "Questions",
   "Danke fürs Mitmachen! Du kennst dich jetzt richtig gut im Arenenberger Milchviehstall aus.": "Merci d’avoir participé ! Tu connais maintenant très bien l’étable pour vaches laitières d’Arenenberg.",
   "Nochmal spielen": "Jouer encore une fois",
-  "Bäuerin": "Éleveur",
+  "Bauer": "Éleveur",
   "Frida": "Frida",
-  "Folgen Sie einem typischen Apriltag einer Kuh im Arenenberger Milchviehstall! Die Kuh Frida ist fünf Jahre alt. Sie hat zweimal gekalbert. Pro Tag liefert sie im Schnitt 25 Liter Milch.": "Suivez une journée d’avril typique d’une vache dans l’étable laitière d’Arenenberg ! La vache Frida a cinq ans. Elle a vêlé deux fois. Elle fournit en moyenne 25 litres de lait par jour.",
-  "6.00": "6 h 00",
+  "06.00": "6 h 00",
   "6 Uhr": "6 h 00",
+  "07.00": "7 h 00",
+  "7 Uhr": "7 h 00",
+  "08.00": "8 h 00",
+  "8 Uhr": "8 h 00",
+  "09.00": "9 h 00",
+  "9 Uhr": "9 h 00",
+  "10.00": "10 h 00",
+  "10 Uhr": "10 h 00",
+  "11.00": "11 h 00",
+  "11 Uhr": "11 h 00",
+  "12.00": "12 h 00",
+  "12 Uhr": "12 h 00",
+  "13.00": "13 h 00",
+  "13 Uhr": "13 h 00",
+  "14.00": "14 h 00",
+  "14 Uhr": "14 h 00",
+  "15.00": "15 h 00",
+  "15 Uhr": "15 h 00",
+  "16.00": "16 h 00",
+  "16 Uhr": "16 h 00",
+  "17.00": "17 h 00",
+  "17 Uhr": "17 h 00",
+  "18.00": "18 h 00",
+  "18 Uhr": "18 h 00",
+  "19.00": "19 h 00",
+  "19 Uhr": "19 h 00",
+  "20.00": "20 h 00",
+  "20 Uhr": "20 h 00",
+  "22.00": "22 h 00",
+  "Folgen Sie einem typischen Apriltag einer Kuh im Arenenberger Milchviehstall! Die Kuh Frida ist fünf Jahre alt. Sie hat zweimal gekalbert. Pro Tag liefert sie im Schnitt 25 Liter Milch.": "Suivez une journée d’avril typique d’une vache dans l’étable laitière d’Arenenberg ! La vache Frida a cinq ans. Elle a vêlé deux fois. Elle fournit en moyenne 25 litres de lait par jour.",
   "Frida geht auf die Weide. Sie frisst junges, frisches Gras. Das ist sehr gehaltreiches Futter.": "Frida part au pâturage. Elle mange de l’herbe tendre et fraîche. C’est un fourrage très riche.",
   "Freier Tierverkehr": "Libre circulation des animaux",
   "Frida und die anderen Kühe am Arenenberg geniessen grosse Freiheiten. Sie entscheiden selbst, wann sie fressen und trinken, liegen oder sich melken lassen.": "Frida et les autres vaches d’Arenenberg jouissent d’une grande liberté. Elles décident elles-mêmes quand elles veulent manger et boire, se coucher ou se faire traire.",
-  "10.00": "10 h 00",
-  "10 Uhr": "10 h 00",
   "Frida geht zurück zum Stall. Sie freut sich auf den Nachtisch, das Lockfutter, das beim Melkroboter auf sie wartet.": "Frida retourne à l’étable. Elle est impatiente de déguster son dessert, le délicieux fourrage qui va l’attirer près du robot de traite.",
   "Weidemanagement": "Gestion des pâturages",
   "Die Kühe sollen möglichst viel junges Gras auf der Weide fressen, jedoch nicht den ganzen Tag. Mindestens zweimal täglich müssen sie gemolken werden. Die Weide ist so gross, dass die Kühe sie in einigen Stunden abweiden. Mit dem Wissen, dass sie am Nachmittag wieder auf eine neue, frische Weide zugelassen werden, gehen sie vor dem Mittag zurück in den Stall und lassen sich melken.": "Les vaches doivent manger autant d’herbe tendre que possible dans les pâturages, mais pas toute la journée. Elles doivent être traites au moins deux fois par jour. Le pâturage est suffisamment grand pour que les vaches le broutent en quelques heures. Sachant qu’elles iront dans un nouveau pâturage frais l’après-midi, elles retournent à l’étable avant midi pour se faire traire.",
-  "11.00": "11 h 00",
-  "11 Uhr": "11 h 00",
   "Frida steht im Melkroboter. Sie frisst leckeres Futter und wird gemolken. Der Melkroboter führt die Melkarbeit stets gleich und geduldig aus. Das ist angenehm für Frida.": "Frida se trouve dans le robot de traite. Elle mange un délicieux fourrage et se fait traire. Le robot de traite effectue toujours la traite de la même manière et avec délicatesse. Ce moment est agréable pour Frida.",
   "Automatisches Melksystem": "Système de traite automatique",
   "Die Kühe werden mit Futter in den Melkroboter gelockt. Die Melkarbeit übernimmt das automatische Melksystem. Es melkt ohne Stress und nicht zu lange. Die Kühe sollen mindestens zweimal pro Tag gemolken werden.": "Les vaches sont attirées dans le robot de traite avec du fourrage. Le système de traite automatique se charge de la traite. Il trait sans stress et cela ne dure pas trop longtemps. Les vaches doivent être traites au moins deux fois par jour.",
-  "12.00": "12 h 00",
-  "12 Uhr": "12 h 00",
   "Besonders nach dem Melken, aber auch immer wieder zwischendurch, trinkt Frida am Tränketrog frisches Wasser, pro Tag durchschnittlich circa 120 Liter. Nach dem frischen und jungen Gras hat Frida Lust auf etwas Trockenes und Ballastreiches. Sie frisst am Futtertisch Heu. Heu ist ein ideales Ausgleichsfutter zu jungem Gras und stabilisiert die Verdauung von Frida.": "Frida boit de l’eau fraîche à l’abreuvoir, environ 120 litres par jour en moyenne, principalement après la traite, mais aussi quand l’envie lui prend. Après l’herbe tendre et fraîche, Frida a envie de quelque chose de sec et de riche en fibres. Elle mange du foin dans la mangeoire. Le foin est un aliment qui équilibre parfaitement l’herbe tendre et stabilise la digestion de Frida.",
   "Daten": "Données",
   "Der Melkroboter und ein Sensor am Halsband der Kühe sammeln Daten zur Milch und zur Kuh. Diese Daten beschreiben z. B. die Qualität der Milch oder die Aktivität der Kühe. Sie liefern zudem Hinweise auf ihre Gesundheit.": "Le robot de traite et un capteur placé sur le collier des vaches collectent des données sur le lait et la vache. Ces données décrivent par exemple la qualité du lait ou l’activité des vaches. Elles fournissent également des informations sur leur santé.",
-  "13.00": "13 h 00",
-  "13 Uhr": "13 h 00",
   "Frida will sich ausruhen und legt sich ins frisch eingestreute Sägemehl. Zuvor macht sie Körperhygiene und lässt sich von der automatischen Kuhputzbürste den Staub aus dem Fell bürsten.": "Frida veut se reposer et s’allonge dans la sciure fraîchement répandue. Auparavant, elle fait sa toilette et retire la poussière de son pelage à l’aide de la brosse automatique.",
   "Kompostierungsstall": "Étable à compost",
   "Der Kompostierungsstall bietet den Kühen viel Liegekomfort und grosse Bewegungsfreiheit. Die Liegefläche wird mit frischem Einstreumaterial wie Sägemehl eingefüllt. Aus dem Einstreumaterial, dem Kot und dem Harn der Kühe entsteht ein wertvoller Kompost, der als Dünger auf die Felder verteilt wird.": "L’étable à compost offre aux vaches un grand confort de couchage et une grande liberté de mouvement. La surface de repos est remplie de litière fraîche, par exemple de la sciure. Les litières, les excréments et l’urine des vaches forment un précieux compost qui est répandu dans les champs sous forme d’engrais.",
-  "17.00": "17 h 00",
-  "17 Uhr": "17 h 00",
   "Es ist Zeit, nochmals auf die Weide zu gehen. Frida begibt sich zum Weidetor und erhält Zugang zu einer neuen, frischen Weide mit saftigem Gras.": "Il est temps de retourner au pâturage. Frida se dirige vers la porte du pâturage et accède à une nouvelle prairie fraîche faite d’herbe luxuriante.",
   "Weidetor": "Portail du pâturage",
   "Die Kühe werden über das Weidetor gesteuert. Das Weidetor gibt ihnen den Zugang zur Weide nur frei, wenn ihre letzte Melkung weniger als sieben Stunden zurückliegt. Ansonsten werden sie zurück in den Stall geleitet, um zuerst den Melkroboter aufzusuchen.": "Les vaches sont guidées par le portail du pâturage, qui ne leur permet d’accéder à ce dernier que si leur dernière traite remonte à moins de sept heures. Sinon, elles doivent retourner à l’étable et se rendre au robot de traite.",
-  "20.00": "20 h 00",
-  "20 Uhr": "20 h 00",
   "Satt gefressen begibt sich Frida zurück in den Stall und lässt sich nochmals melken. Danach entscheidet sie selbst, ob sie die Nacht im Stall oder im Freien auf der Weide verbringt.": "Rassasiée, Frida retourne à l’étable et se fait traire à nouveau. Elle décide ensuite elle-même si elle passe la nuit dans l’étable ou en plein air dans les pâturages.",
-  "22.00": "22 h 00"
+  "Folgen Sie einem typischen Arbeitstag des Bauern im Arenenberger Milchviehstall!": "Suivez une journée de travail typique de l’éleveur de l’étable pour vaches à lait d’Arenenberg !",
+  "Der Bauer startet um 6 Uhr seine Arbeit im Arenenberger Milchviehstall. Feierabend ist um 18 Uhr. Als Erstes überprüft der Bauer den Milchtank (Milchtemperatur, Filter). Ab und zu wird er von einem frisch geborenen Kalb überrascht, das bereits bei seiner Mutter steht. In rund neunzig Prozent der Fälle erfolgt eine Kalbung in der Nacht.": "L’éleveur commence son travail à 6 heures dans l’étable d’Arenenberg. Sa journée de travail se termine à 18 heures. Tout d’abord, l’éleveur vérifie le réservoir à lait (température du lait, filtre). Il lui arrive parfois de trouver un veau qui vient de naître et qui se trouve déjà auprès de sa mère. Dans environ 90 % des cas, le vêlage a lieu la nuit.",
+  "Stall": "Étable",
+  "Der Arenenberger Milchviehstall bietet den Kühen maximalen Liegekomfort und grosse Bewegungsfreiheit. So können sie ohne Stress ihre Kälber gebären. Die Jungtiere vertragen die tiefen Temperaturen im Stall gut. Was sie nicht mögen, ist die Zugluft.": "L’étable d’Arenenberg offre aux vaches un confort de couchage maximal et une grande liberté de mouvement. Elles peuvent ainsi vêler sans être stressées. Les petits supportent bien les températures basses de l’étable. Ce qu’ils craignent, ce sont les courants d’air.",
+  "Der Bauer reinigt mit Wasser den Melkroboter und den Standplatz für die Kühe. Er erwärmt die Milch für die Kälber auf maximal 42 Grad Celsius. Die vom automatischen Melksystem erfassten Daten zeigen dem Bauer an, ob eine Kuh brünstig oder krank ist. Er ergreift die entsprechenden Massnahmen und lässt die Kuh besamen oder behandeln.": "L’éleveur nettoie avec de l’eau le robot de traite et la stalle pour les vaches. Il réchauffe le lait pour les veaux à une température maximale de 42 degrés Celsius. Les données recueillies par le système de traite automatique indiquent à l’éleveur si une vache est malade ou en chaleur. Il prend les mesures appropriées et fait inséminer ou soigner la vache.",
+  "Der Bauer säubert die Futterkrippe. Mit dem Kran verteilt er Heu und Emd. Ab August verfüttert der Bauer zusätzlich Frischmais. Im Winter versorgt er jede Kuh mit zehn Kilogramm Karotten oder Randen, vier Kilogramm Vollmaiswürfel und rund zwei Kilogramm Zuckerrübenschnitzel.": "L’éleveur nettoie la mangeoire. Il utilise sa grue pour distribuer le foin et le regain. À partir du mois d’août, l’éleveur donnera également du maïs frais à ses animaux. En hiver, il fournit à chaque vache dix kilos de carottes ou de betteraves, quatre kilos de dés de maïs complet et environ deux kilos de pulpe de betterave sucrière.",
+  "Futter und Heubelüftung": "Fourrage et ventilation du foin",
+  "Im Winter gibt es kein frisches Gras für die Kühe, nur Heu und Dürrfutter. Damit das Heu hochwertig und schmackhaft bleibt, muss es aktiv im Heustock mit warmer Luft nachgetrocknet werden.": "En hiver, il n’y a pas d’herbe fraîche pour les vaches, seulement du foin et du fourrage sec. Pour que le foin reste de bonne qualité et savoureux, il doit être séché activement dans la grange à foin à l’air chaud.",
+  "Der Bauer überprüft das Kraftfuttersilo und den Mineralstoffbehälter. Dann widmet er sich den Kälbern: füttern, Wasser kontrollieren, Futter auffüllen. Schliesslich mistet er aus, streut die Liegefläche neu ein, wischt den Vorplatz und reinigt das sogenannte Milchtaxi. Dieser mobile Milchtank versorgt die Jungtiere mit Milch.": "L’éleveur vérifie le silo à fourrage et le réservoir à substances minérales. Puis, il se consacre aux veaux : nourrir, contrôler l’eau, remplir le fourrage. Enfin, il nettoie le fumier, répand la litière, nettoie la cour d’entrée et le chariot à lait. Ce réservoir à lait mobile fournit du lait aux petits.",
+  "Der Bauer fräst die Liegeflächen, damit Kot und Harn gut durchmischt sind und der Kompostierungsprozess optimal verläuft.": "L’éleveur fraise les surfaces de couchage afin que les excréments et l’urine soient bien mélangés et que le processus de compostage se déroule de manière optimale.",
+  "Entmistungsroboter": "Robot aspirateur",
+  "Bei der Reinigung des Stallbodens wird der Bauer von einem Entmistungsroboter unterstützt. Alle neunzig Minuten fährt dieser eine programmierte Route ab, saugt den Mist in einen Tank auf und entlädt diesen in die Güllegrube. Er befeuchtet den Laufgang und spült ihn nach.": "Un robot aspirateur aide l’éleveur à nettoyer le sol de l’étable. Toutes les quatre-vingt-dix minutes, celui-ci suit un itinéraire programmé, aspire et pousse le fumier. Il humidifie le couloir et le rince.",
+  "Der Bauer geht zu den Leghennen im mobilen Hühnerstall auf der Wiese. Er holt die Eier raus, überprüft den Futter- und Wasserstand und schaut, ob es den rund 350 Hühnern gut geht. Danach kümmert er sich um die circa zwanzig Schafe. Er kontrolliert die Tiere, das Wasser und Futter, den Zaun und die Einstreu im Stall. Und er schaut nach, ob über Nacht ein Lamm geboren ist.": "L’éleveur rejoint les poules pondeuses dans le poulailler mobile installé dans le pré. Il sort les œufs, vérifie les niveaux de nourriture et d’eau et s’assure que les quelque 350 poules vont bien. Il s’occupe ensuite de la vingtaine de moutons. Il contrôle les animaux, l’eau et la nourriture, la clôture et la litière dans l’étable. Et il vérifie si un agneau est né pendant la nuit.",
+  "Mittagszeit": "Pause de midi",
+  "Wenn die Tiere versorgt sind, nimmt der Bauer die übrigen Arbeiten im Stall oder auf dem Feld in Angriff: heuen, Acker bestellen, Instandstellungen.": "Lorsque les animaux sont nourris, l’éleveur se charge des autres travaux dans l’étable ou sur les terres : faire les foins, cultiver les champs, faire les réparations.",
+  "Für den Folgetag richtet der Bauer zwei neue Weide-Koppeln.": "L’éleveur aménage deux nouveaux enclos de pâturage pour le lendemain.",
+  "Der Bauer widmet sich erneut der Stallarbeit: Milch wärmen für die Kälber und Kälber tränken, den Kühen Futter vorlegen, Geräte reinigen.": "L’éleveur se consacre à nouveau au travail dans l’étable : réchauffer le lait pour les veaux, abreuver les veaux, nourrir les vaches, nettoyer les appareils.",
+  "Die Liegefläche der Kühe wird gefräst, Futter und Wasser werden aufgefüllt und die Tiere beobachtet.": "La surface de couchage des vaches est fraisée, la nourriture et l’eau sont réapprovisionnées et les animaux sont contrôlés.",
+  "Eine Schlusskontrolle bei den Leghennen und das Ausstreuen von Körnern beenden den Arbeitstag im Arenenberger Milchviehstall.": "La journée de travail dans l’étable d’Arenenberg se termine par un contrôle final des poules pondeuses et l’épandage du grain."
+
 }
