--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -89,6 +89,50 @@
   "Für den Folgetag richtet der Bauer zwei neue Weide-Koppeln.": "The farmer prepares two new pasture paddocks for the following day.",
   "Der Bauer widmet sich erneut der Stallarbeit: Milch wärmen für die Kälber und Kälber tränken, den Kühen Futter vorlegen, Geräte reinigen.": "The farmer returns to the cowshed to see to any jobs there such as warming the milk for de calves, watering the calves, feeding the cows, cleaning the appliances.",
   "Die Liegefläche der Kühe wird gefräst, Futter und Wasser werden aufgefüllt und die Tiere beobachtet.": "He rakes their bedding, tops up the fodder and water and checks on the animals.",
-  "Eine Schlusskontrolle bei den Leghennen und das Ausstreuen von Körnern beenden den Arbeitstag im Arenenberger Milchviehstall.": "The farmer finishes his working day at in the Arenenberg dairy cowshed with a final check on the laying hens and scattering fresh grain."
-
+  "Eine Schlusskontrolle bei den Leghennen und das Ausstreuen von Körnern beenden den Arbeitstag im Arenenberger Milchviehstall.": "The farmer finishes his working day at in the Arenenberg dairy cowshed with a final check on the laying hens and scattering fresh grain.",
+  "Wieviele Kühe leben im Arenenberger Milchviehstall?": "",
+  "Wieviele Kühe leben im Arenenberger Milchviehstall?": "How many cows live in the Arenenberg dairy cowshed?",
+  "73": "73",
+  "34": "34",
+  "52": "52",
+  "Wie alt sind die Kühe im Arenenberger Milchviehstall durchschnittlich?": "What is the average age of the cows in the Arenenberg dairy cowshed?",
+  "2 Jahre": "2 years",
+  "5 Jahre": "5 years",
+  "8 Jahre": "8 years",
+  "Was lockt die Kühe auf die Weide?": "What attracts the cows to the pasture?",
+  "Sonne": "Sun",
+  "warme Luft": "warm air",
+  "frisches Gras": "fresh grass",
+  "Wieviel Liter Milch gibt eine Kuh im Durchschnitt pro Tag?": "How many litres of milk does a cow produce per day on average?",
+  "10 Liter": "10 litres",
+  "15 Liter": "15 litres",
+  "25 Liter": "25 litres",
+  "Wie oft werden die Kühe pro Tag gemolken?": "How often are the cows milked per day?",
+  "mindestens einmal": "At least once",
+  "mindestens zweimal": "At least twice",
+  "mindestens fünfmal": "At least five times",
+  "Wieviel Wasser trinkt eine Kuh im Durchschnitt pro Tag?": "How much water does a cow drink on average per day?",
+  "60 Liter": "60 litres",
+  "100 Liter": "100 litres",
+  "120 Liter": "120 litres",
+  "Worauf liegen die Kühe im Arenenberger Stall?": "What do the cows in the Arenenberg cowshed lie on?",
+  "Heu": "Hay",
+  "Sägemehl": "Sawdust",
+  "Stroh": "Straw",
+  "Wann werden die meisten Kälber geboren?": "When are the majority of calves born?",
+  "früh morgens": "Early morning",
+  "gegen Abend": "Towards evening",
+  "nachts": "During the night",
+  "Wie warm darf die Milch für die Kälber maximal sein?": "What is the maximum milk temperature for the calves?",
+  "18 Grad": "18 degrees",
+  "32 Grad": "32 degrees",
+  "42 Grad": "42 degrees",
+  "Was ist das Hauptnahrungsmittel der Kuh?": "What is the main food eaten by cows?",
+  "Gras / Heu": "Grass / hay",
+  "Frischmais": "Fresh maize",
+  "Karotten": "Carrots",
+  "Wieviele Hühner leben im mobilen Hühnerstall am Arenenberg?": "How many chickens live in the mobile chicken coop at Arenenberg?",
+  "50": "50",
+  "200": "200",
+  "350": "350"
 }
