--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -90,6 +90,49 @@
   "Für den Folgetag richtet der Bauer zwei neue Weide-Koppeln.": "L’éleveur aménage deux nouveaux enclos de pâturage pour le lendemain.",
   "Der Bauer widmet sich erneut der Stallarbeit: Milch wärmen für die Kälber und Kälber tränken, den Kühen Futter vorlegen, Geräte reinigen.": "L’éleveur se consacre à nouveau au travail dans l’étable : réchauffer le lait pour les veaux, abreuver les veaux, nourrir les vaches, nettoyer les appareils.",
   "Die Liegefläche der Kühe wird gefräst, Futter und Wasser werden aufgefüllt und die Tiere beobachtet.": "La surface de couchage des vaches est fraisée, la nourriture et l’eau sont réapprovisionnées et les animaux sont contrôlés.",
-  "Eine Schlusskontrolle bei den Leghennen und das Ausstreuen von Körnern beenden den Arbeitstag im Arenenberger Milchviehstall.": "La journée de travail dans l’étable d’Arenenberg se termine par un contrôle final des poules pondeuses et l’épandage du grain."
-
+  "Eine Schlusskontrolle bei den Leghennen und das Ausstreuen von Körnern beenden den Arbeitstag im Arenenberger Milchviehstall.": "La journée de travail dans l’étable d’Arenenberg se termine par un contrôle final des poules pondeuses et l’épandage du grain.",
+  "Wieviele Kühe leben im Arenenberger Milchviehstall?": "Combien de vaches vivent dans l’étable d’Arenenberg ?",
+  "73": "73",
+  "34": "34",
+  "52": "52",
+  "Wie alt sind die Kühe im Arenenberger Milchviehstall durchschnittlich?": "Quel âge ont en moyenne les vaches dans l’étable d’Arenenberg ?",
+  "2 Jahre": "2 ans",
+  "5 Jahre": "5 ans",
+  "8 Jahre": "8 ans",
+  "Was lockt die Kühe auf die Weide?": "Qu’est-ce qui attire les vaches dans les pâturages ?",
+  "Sonne": "Soleil",
+  "warme Luft": "air chaud",
+  "frisches Gras": "herbe fraîche",
+  "Wieviel Liter Milch gibt eine Kuh im Durchschnitt pro Tag?": "Combien de litres de lait une vache produit-elle en moyenne par jour ?",
+  "10 Liter": "10 litres",
+  "15 Liter": "15 litres",
+  "25 Liter": "25 litres",
+  "Wie oft werden die Kühe pro Tag gemolken?": "Combien de fois les vaches sont-elles traites par jour ?",
+  "mindestens einmal": "au moins une fois",
+  "mindestens zweimal": "au moins deux fois",
+  "mindestens fünfmal": "au moins cinq fois",
+  "Wieviel Wasser trinkt eine Kuh im Durchschnitt pro Tag?": "Combien d’eau une vache boit-elle en moyenne par jour ?",
+  "60 Liter": "60 litres",
+  "100 Liter": "100 litres",
+  "120 Liter": "120 litres",
+  "Worauf liegen die Kühe im Arenenberger Stall?": "Sur quoi se couchent les vaches dans l’étable d’Arenenberg ?",
+  "Heu": "Foin",
+  "Sägemehl": "sciure",
+  "Stroh": "paille",
+  "Wann werden die meisten Kälber geboren?": "Quand naissent la plupart des veaux ?",
+  "früh morgens": "tôt le matin",
+  "gegen Abend": "vers le soir",
+  "nachts": "la nuit",
+  "Wie warm darf die Milch für die Kälber maximal sein?": "Quelle doit être la température maximale du lait pour les veaux ?",
+  "18 Grad": "18 degrés",
+  "32 Grad": "32 degrés",
+  "42 Grad": "42 degrés",
+  "Was ist das Hauptnahrungsmittel der Kuh?": "Quel est l’aliment principal de la vache ?",
+  "Gras / Heu": "Herbe / foin",
+  "Frischmais": "maïs frais",
+  "Karotten": "carottes",
+  "Wieviele Hühner leben im mobilen Hühnerstall am Arenenberg?": "Combien de poules vivent dans le poulailler mobile d’Arenenberg ?",
+  "50": "50",
+  "200": "200",
+  "350": "350"
 }
