--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -13,7 +13,7 @@
   "Willkommen im Arenenberger Milchviehstall!": "Welcome to the Arenenberg dairy barn!",
   "Du begleitest die Kuh Frida durch einen typischen Apriltag und entdeckst die Arbeiten im Arenenberger Milchviehstall. Wähle eine Persona aus und klicke auf dem Zeitstrahl die Uhrzeit an, die Dich interessiert! So erfährst Du Wissenswertes über die Aufgaben der Mitarbeitenden im Stall sowie über die Tiere am Arenenberg. Gleichzeitig kannst Du in einem Quiz Dein Wissen testen. Viel Spass!": "Accompany Frida the Cow on a typical April day and learn about the work done in the Arenenberg dairy barn. Choose a character and click the time of day that interests you on the time line! You’ll learn useful information about the staff’s duties in the barn and about the animals at Arenenberg. Then, you can take a quiz to test your knowledge! Have fun!",
   "Tageszeit": "Time of day",
-  "Deine Antwort war korrekt.": "Your answer was correct.",
+  "Deine Antwort ist korrekt.": "Your answer is correct.",
   "Falsch! Richtig ist Antwort": "Wrong! The correct is answer",
   "Nächste Frage": "Next question",
   "Fragen": "Questions",
