--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -13,7 +13,7 @@
   "Willkommen im Arenenberger Milchviehstall!": "Bienvenue dans l’étable laitière d’Arenenberg !",
   "Du begleitest die Kuh Frida durch einen typischen Apriltag und entdeckst die Arbeiten im Arenenberger Milchviehstall. Wähle eine Persona aus und klicke auf dem Zeitstrahl die Uhrzeit an, die Dich interessiert! So erfährst Du Wissenswertes über die Aufgaben der Mitarbeitenden im Stall sowie über die Tiere am Arenenberg. Gleichzeitig kannst Du in einem Quiz Dein Wissen testen. Viel Spass!": "Tu accompagnes la vache Frida pendant une journée d'avril typique et tu découvres les travaux dans l’étable laitière d’Arenenberg. Choisis un personnage et clique sur l’heure qui t’intéresse dans la ligne temporelle ! Tu apprendras ainsi des choses intéressantes sur les tâches des personnes travaillant dans l’étable et sur les animaux d’Arenenberg. Tu peux aussi tester tes connaissances avec un quiz. Amuse-toi bien !",
   "Tageszeit": "Moment de la journée",
-  "Deine Antwort war korrekt.": "Votre réponse est correcte.",
+  "Deine Antwort ist korrekt.": "Ta réponse est correcte.",
   "Falsch! Richtig ist Antwort": "Faux ! La bonne réponse est",
   "Nächste Frage": "Question suivante",
   "Fragen": "Questions",
